<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cari Pura</string>
    <string name="main_on_back_pressed">Tekan tombol kembali lagi untuk keluar</string>
    <string name="my_temple_list_text_no_data">Belum ada pura yang terdaftar</string>
    <string name="my_temple_list_approved_text_no_data">Belum ada pura yang disetujui</string>
    <string name="my_temple_list_waiting_text_no_data">Belum ada pura yang menunggu persetujuan</string>
    <string name="sign_up_text_already_have_a_contributor_account">Sudah punya akun kontributor?</string>
    <string name="sign_up_text_login_here">Login disini</string>
    <string name="sign_up_edit_phone_number">Nomor Telepon</string>
    <string name="sign_up_edit_full_name">Nama Lengkap</string>
    <string name="sign_up_edit_password">Kata Sandi</string>
    <string name="sign_up_edit_email">Email</string>
    <string name="sign_up_button">Daftar</string>
    <string name="temple_detail_button_route">Rute</string>
    <string name="temple_detail_button_call">Hubungi</string>
    <string name="temple_detail_text_temple_feast_day">Piodalan pura</string>
    <string name="temple_detail_text_together_prayer">Persembahyangan bersama</string>
    <string name="temple_detail_text_full_moon">Purnama</string>
    <string name="temple_detail_text_dead_moon">Tilem</string>
    <string name="temple_detail_text_galungan">Galungan</string>
    <string name="temple_detail_text_kuningan">Kuningan</string>
    <string name="temple_detail_text_saraswati">Saraswati</string>
    <string name="temple_detail_text_pagerwesi">Pagerwesi</string>
    <string name="temple_detail_text_siwaratri">Siwaratri</string>
    <string name="temple_detail_text_melukat">Melukat</string>
    <string name="temple_detail_text_others">Lain-lain</string>
    <string name="temple_detail_text_prayer_equipment_seller">Penjual perlengkapan persembahyangan</string>
    <string name="temple_detail_text_food_drink_seller"><![CDATA[Penjual makanan & minuman]]></string>
    <string name="add_edit_temple_first_text_time">00.00</string>
    <string name="add_edit_temple_first_text_dash">-</string>
    <string name="add_edit_temple_first_edit_temple_name">Nama pura</string>
    <string name="add_edit_temple_first_edit_temple_address">Alamat pura</string>
    <string name="add_edit_temple_first_edit_village_office">Kelurahan</string>
    <string name="add_edit_temple_first_edit_sub_district">Kecamatan</string>
    <string name="add_edit_temple_first_button_pick_location">Pilih Lokasi</string>
    <string name="add_edit_temple_first_caretaker_name">Nama pengempon</string>
    <string name="add_edit_temple_first_edit_caretaker_phone_number">Nomor telepon pengempon</string>
    <string name="add_edit_temple_first_temple_feast_day">Hari piodalan pura</string>
    <string name="add_edit_temple_first_button_add_photo">Tambah Foto</string>
    <string name="add_edit_temple_first_button_edit_photo">Ubah Foto</string>
    <string name="add_edit_temple_first_button_next">Lanjut</string>
    <string name="add_edit_temple_second_text_melukat_information">Melukat dilaksanakan sebulan sekali setiap hari Minggu pekan pertama bulan tersebut</string>
    <string name="add_edit_temple_second_text_together_prayer">Persembahyangan bersama</string>
    <string name="add_edit_temple_second_checkbox_full_moon">Purnama</string>
    <string name="add_edit_temple_second_checkbox_dead_moon">Tilem</string>
    <string name="add_edit_temple_second_checkbox_galungan">Galungan</string>
    <string name="add_edit_temple_second_checkbox_kuningan">Kuningan</string>
    <string name="add_edit_temple_second_checkbox_saraswati">Saraswati</string>
    <string name="add_edit_temple_second_checkbox_pagerwesi">Pagerwesi</string>
    <string name="add_edit_temple_second_checkbox_siwaratri">Siwaratri</string>
    <string name="add_edit_temple_second_checkbox_melukat">Melukat</string>
    <string name="add_edit_temple_second_edit_melukat_information">Informasi terkait jadwal melukat</string>
    <string name="add_edit_temple_second_checkbox_prayer_equipment_seller">Penjual perlengkapan persembahyangan</string>
    <string name="add_edit_temple_second_checkbox_food_drink_seller"><![CDATA[Penjual makanan & minuman]]></string>
    <string name="add_edit_temple_second_text_others">Lain-Lain</string>
    <string name="add_edit_temple_second_button_add">Tambah</string>
    <string name="add_edit_temple_second_button_edit">Ubah</string>
    <string name="add_edit_temple_second_edit_note_for_admin">Catatan untuk admin</string>
    <string name="temple_request_detail_text_label_accepted">Diterima</string>
    <string name="temple_request_detail_text_label_rejected">Ditolak</string>
    <string name="temple_request_detail_text_label_deleted_by_admin">Dihapus oleh Admin</string>
    <string name="temple_request_detail_text_label_edited_by_admin">Diubah oleh Admin</string>
    <string name="temple_request_detail_edit_contributor_note">Catatan kontributor</string>
    <string name="temple_request_detail_text_requested_by">Diajukan oleh</string>
    <string name="temple_request_detail_edit_note_for_contributor">Catatan untuk kontributor</string>
    <string name="temple_request_detail_button_accept">Terima</string>
    <string name="temple_request_detail_button_reject">Tolak</string>
    <string name="temple_request_detail_edit_admin_note">Catatan admin</string>
    <string name="temple_request_detail_edit_note_for_admin">Catatan untuk admin</string>
    <string name="temple_request_detail_toast_accepted">Pengajuan diterima</string>
    <string name="temple_request_detail_toast_rejected">Pengajuan ditolak</string>
    <string name="temple_request_detail_text_temple_request_cancelled">Pengajuan pura dibatalkan</string>
    <string name="requested_by_text_input_edit_text_full_name">Nama Lengkap</string>
    <string name="requested_by_text_input_edit_text_phone_number">Nomor Telepon</string>
    <string name="delete_temple_edit_note_for_admin">Catatan untuk admin</string>
    <string name="delete_temple_text_question">Anda yakin ingin menghapus pura ini?</string>
    <string name="delete_temple_button_delete">HAPUS</string>
    <string name="delete_temple_button_cancel">BATAL</string>
    <string name="my_temple_detail_waiting_edit_note_for_admin">Catatan untuk admin</string>
    <string name="pick_location_button_pick_location">Pilih Lokasi</string>
    <string name="account_login_edit_email">Email</string>
    <string name="account_login_edit_password">Kata Sandi</string>
    <string name="account_login_button_login">Login</string>
    <string name="account_login_text_want_to_be_a_contributor">Ingin menjadi kontributor?</string>
    <string name="account_login_text_sign_up_here">Daftar disini</string>
    <string name="find_temple_button_find_the_nearest_temple">Cari Pura Terdekat</string>
    <string name="logged_in_text_input_edit_text_full_name">Nama Lengkap</string>
    <string name="logged_in_text_input_edit_text_phone_number">Nomor Telepon</string>
    <string name="logged_in_text_input_edit_text_email">Email</string>
    <string name="logged_in_button_my_temple_list">Daftar Pura Saya</string>
    <string name="logged_in_text_admin">Admin</string>
    <string name="logged_in_button_temple_request_list">Daftar Pengajuan Pura</string>
    <string name="logged_in_text_contributor">Kontributor</string>
    <string name="temple_list_text_no_data">Tidak ada pura ditemukan</string>
    <string name="temple_list_edit_find_temple">Cari pura</string>
    <string name="temple_request_list_no_requests">Belum ada pengajuan pura yang diajukan</string>
    <string name="temple_request_list_no_histories">Belum ada riwayat pengajuan pura</string>
    <string name="item_temple_list_text_dash">-</string>
    <string name="item_temple_list_text_together_prayer">Persembahyangan bersama</string>
    <string name="item_temple_list_text_full_moon">Purnama</string>
    <string name="item_temple_list_text_dead_moon">Tilem</string>
    <string name="menu_main_bottom_navigation_find_temple">Cari Pura</string>
    <string name="menu_main_bottom_navigation_temple_list">Daftar Pura</string>
    <string name="menu_main_bottom_navigation_account">Akun</string>
    <string name="menu_logged_in_options_logout">Logout</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Anda yakin ingin logout?</string>
    <string name="dialog_logout_positive_button">BATAL</string>
    <string name="dialog_logout_negative_button">LOGOUT</string>
    <string name="menu_my_temple_detail_options_edit">Edit</string>
    <string name="menu_my_temple_detail_options_delete">Delete</string>
    <string name="menu_my_temple_detail_options_cancel">Batal</string>
    <string name="dialog_delete_title">Hapus Pura</string>
    <string name="dialog_delete_message">Anda yakin ingin menghapus pura ini?</string>
    <string name="dialog_delete_positive_button" tools:ignore="ButtonCase">BATAL</string>
    <string name="dialog_delete_negative_button">HAPUS</string>
    <string name="menu_history">Riwayat</string>
    <string name="menu_cancel">Batalkan</string>
    <string name="dialog_cancel_title_add">Batal Pengajuan Tambah Pura</string>
    <string name="dialog_cancel_title_edit">Batal Pengajuan Ubah Pura</string>
    <string name="dialog_cancel_title_delete">Batal Pengajuan Hapus Pura</string>
    <string name="dialog_cancel_message_add">Anda yakin ingin membatalkan pengajuan tambah pura ini?</string>
    <string name="dialog_cancel_message_edit">Anda yakin ingin membatalkan pengajuan ubah pura ini?</string>
    <string name="dialog_cancel_message_delete">Anda yakin ingin membatalkan pengajuan hapus pura ini?</string>
    <string name="dialog_cancel_positive_button" tools:ignore="ButtonCase">NO</string>
    <string name="dialog_cancel_negative_button">YES</string>
    <string name="view_pager_add_temple">Tambah</string>
    <string name="view_pager_edit_temple">Ubah</string>
    <string name="view_pager_delete_temple">Hapus</string>
    <string name="view_pager_approved">Disetujui</string>
    <string name="view_pager_waiting">Menunggu</string>
    <string name="label_my_temple_list">Daftar Pura Saya</string>
    <string name="label_sign_up">Daftar</string>
    <string name="label_temple_detail">Detail Pura</string>
    <string name="label_edit_temple">Ubah Pura</string>
    <string name="label_add_temple">Tambah Pura</string>
    <string name="label_temple_request_list">Daftar Pengajuan Pura</string>
    <string name="label_temple_request_history">Riwayat Pengajuan Pura</string>
    <string name="label_requested_by">Diajukan Oleh</string>
    <string name="label_delete_temple_request">Ajukan Hapus Pura</string>
    <string name="label_edit_temple_request">Ajukan Ubah Pura</string>
    <string name="label_add_temple_request">Ajukan Tambah Pura</string>
    <string name="label_route_to_temple">Rute Menuju Pura</string>
    <string name="label_pick_location">Pilih Lokasi</string>
    <string name="item_label_request_add_temple">Pengajuan Tambah Pura</string>
    <string name="item_label_request_edit_temple">Pengajuan Ubah Pura</string>
    <string name="item_label_request_delete_temple">Pengajuan Hapus Pura</string>
    <string name="item_label_accepted">Diterima</string>
    <string name="item_label_rejected">Ditolak</string>
    <string name="error_message_fill_this_field">Isi kolom ini</string>
    <string name="error_message_invalid_email">Email tidak valid</string>
    <string name="error_message_password_length">Panjang kata sandi minimal 6 karakter</string>
    <string name="error_message_verification_sent">Email verifikasi terkirim</string>
    <string name="error_message_verification_failed">Gagal mengirim email verifikasi</string>
    <string name="error_message_sign_up_failed">Gagal mendaftarkan akun, coba lagi</string>
</resources>