<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.DeleteTempleActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_delete_temple_note_for_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_delete_temple_note_for_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/delete_temple_edit_note_for_admin"
            android:inputType="textMultiLine|textCapSentences"
            android:lineSpacingMultiplier="1.5"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_delete_temple_note_for_admin">

        <Button
            android:id="@+id/button_delete_temple_delete"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorNegativeButton"
            android:text="@string/delete_temple_button_delete" />

        <Button
            android:id="@+id/button_delete_temple_cancel"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/delete_temple_button_cancel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>