<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:background="@android:color/white"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_item_temple_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="centerCrop"
            android:src="@color/colorAccent"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_item_temple_list_temple_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_medium"
                android:textColor="@color/colorTextBlack"
                android:textSize="20sp"
                tools:text="Pura Marga Shirsa" />

            <TextView
                android:id="@+id/text_item_temple_list_temple_village_office"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_item_temple_list_temple_name"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_location_on_purple_14dp"
                android:drawablePadding="8dp"
                android:textColor="@color/colorTextHint"
                android:textSize="16sp"
                tools:text="Pisangcandi" />

            <TextView
                android:id="@+id/text_item_temple_list_pray_together"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_item_temple_list_temple_village_office"
                android:layout_marginTop="16dp"
                android:text="@string/item_temple_list_text_together_prayer"
                android:textColor="@color/colorTextBlack"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linear_item_temple_list_full_moon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_item_temple_list_pray_together"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_temple_list_text_full_moon"
                    android:textColor="@color/colorTextHint" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_schedule_purple_14dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_item_temple_list_full_moon_prayer_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    tools:text="00.00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/item_temple_list_text_dash"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_item_temple_list_full_moon_prayer_end"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    tools:text="00.00" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_item_temple_list_dead_moon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_item_temple_list_full_moon"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_temple_list_text_dead_moon"
                    android:textColor="@color/colorTextHint" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_schedule_purple_14dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_item_temple_list_dead_moon_prayer_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    tools:text="00.00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/item_temple_list_text_dash"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_item_temple_list_dead_moon_prayer_end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    tools:text="00.00" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>